definitions section added

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   </head>
-  <body>
+  <body class="px-[24px]">
     <!-- navgation -->
-    <nav class="flex items-center justify-between mx-[24px] h-[32px] mt-[24px]">
+    <nav class="flex items-center justify-between h-[32px] mt-[24px]">
       <figure>
         <img src="./assets/icons/book.svg" alt="book-logo" />
       </figure>
@@ -63,7 +63,7 @@
 
     <!-- input section -->
 
-    <section class="mt-[24px] mx-[24px]">
+    <section class="mt-[24px]">
       <div class="relative">
         <input
           name="text"
@@ -81,7 +81,7 @@
     </section>
     <!-- input section ends -->
 
-    <section class="mt-[24px] mx-[24px] flex items-center justify-between">
+    <section class="mt-[24px] flex items-center justify-between">
       <div class="flex justify-center flex-col">
         <h1 class="font-bold text-[32px]">keyboard</h1>
         <p class="text-[18px] text-[#A445ED]">/ˈkiːbɔːd/</p>
@@ -102,5 +102,37 @@
         />
       </figure>
     </section>
+
+    <section class="flex items-center gap-[16px] mt-[32px]">
+      <h1 class="text-[18px] font-bold italic">noun</h1>
+      <hr class="bg-[#E9E9E9] h-[1px] w-full" />
+    </section>
+
+    <section class="mt-[32px] flex flex-col justify-center">
+      <h1 class="font-[16px] text-[#757575]">Meaning</h1>
+
+      <ul
+        class="list-disc leading-[24px] text-[15px] text-[#2d2d2d] ml-[18px] mt-[16px] flex flex-col justify-center gap-[13px]"
+      >
+        <li>
+          (etc.) A set of keys used to operate a typewriter, computer etc.
+        </li>
+        <li>
+          A component of many instruments including the piano, organ, and
+          harpsichord consisting of usually black and white keys that cause
+          different tones to be produced when struck.
+        </li>
+        <li>
+          A device with keys of a musical keyboard, used to control electronic
+          sound-producing devices which may be built into or separate from the
+          keyboard device.
+        </li>
+      </ul>
+    </section>
+
+    <div class="mt-[24px] flex items-center gap-[24px]">
+      <p class="text-[16px] text-[#757575]">Synonyms</p>
+      <p class="text-[16px] text-[#A445ED] opacity-100">electronic keyboard</p>
+    </div>
   </body>
 </html>
