list style updated, frontend structure nearly complete

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <h1 class="font-[16px] text-[#757575]">Meaning</h1>
 
       <ul
-        class="list-disc leading-[24px] text-[15px] text-[#2d2d2d] ml-[18px] mt-[16px] flex flex-col justify-center gap-[13px]"
+        class="list-disc marker:text-[#8F19E8] leading-[24px] text-[15px] text-[#2d2d2d] ml-[18px] mt-[16px] flex flex-col justify-center gap-[13px]"
       >
         <li>
           (etc.) A set of keys used to operate a typewriter, computer etc.
@@ -134,5 +134,9 @@
       <p class="text-[16px] text-[#757575]">Synonyms</p>
       <p class="text-[16px] text-[#A445ED] opacity-100">electronic keyboard</p>
     </div>
+
+    <section class="flex flex-col justify-center mt-[32px]">
+      <div class="flex items-center"></div>
+    </section>
   </body>
 </html>
