--- a/index.html
+++ b/index.html
@@ -136,7 +136,35 @@
     </div>
 
     <section class="flex flex-col justify-center mt-[32px]">
-      <div class="flex items-center"></div>
+      <div class="flex items-center gap-[16px]">
+        <p class="text-[18px] font-bold italic">verb</p>
+        <hr class="bg-[#E9E9E9] h-[1px] w-full" />
+      </div>
+
+      <section class="mt-[32px] flex flex-col justify-center">
+        <h1 class="font-[16px] text-[#757575]">Meaning</h1>
+        <ul class="mt-[16px] list-disc marker:text-[#8F19E8] ml-[18px]">
+          <li>To type on a computer keyboard</li>
+
+          <p class="mt-[16px] text-[15px] text-[#757575]">
+            “Keyboarding is the part of this job I hate the most.”
+          </p>
+        </ul>
+      </section>
+
+      <div class="mt-[32px] flex justify-center flex-col">
+        <hr class="bg-[#E9E9E9] h-[1px] w-full" />
+
+        <div class="flex flex-col mt-[24px] justify-center gap-[8px]">
+          <p class="text-[#757575] text-[14px] underline">Source</p>
+          <div class="flex items-center gap-[8px]">
+            <p class="text-[#2d2d2d] text-[14px] underline">
+              https://en.wiktionary.org/wiki/keyboard
+            </p>
+            <img src="./assets/icons/link.svg" alt="link" />
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
