--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <section class="mt-[24px]">
       <div class="relative">
         <input
+          id="search-input"
           name="text"
           id="text"
           type="text"
@@ -88,6 +89,7 @@
       </div>
 
       <figure
+        id="play"
         class="relative flex items-center justify-center h-[48px] w-[48px] rounded-full overflow-hidden"
       >
         <!-- Semi-transparent background overlay -->
@@ -166,5 +168,7 @@
         </div>
       </div>
     </section>
+
+    <script src="script.js"></script>
   </body>
 </html>
