--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
     <section class="mt-[24px] flex items-center justify-between">
       <div class="flex justify-center flex-col">
-        <h1 class="font-bold text-[32px]">keyboard</h1>
-        <p class="text-[18px] text-[#A445ED]">/ˈkiːbɔːd/</p>
+        <h1 id="main-text" class="font-bold text-[32px]">keyboard</h1>
+        <p id="phonetics" class="text-[18px] text-[#A445ED]">/ˈkiːbɔːd/</p>
       </div>
 
       <figure
@@ -114,6 +114,7 @@
       <h1 class="font-[16px] text-[#757575]">Meaning</h1>
 
       <ul
+        id="definitions"
         class="list-disc marker:text-[#8F19E8] leading-[24px] text-[15px] text-[#2d2d2d] ml-[18px] mt-[16px] flex flex-col justify-center gap-[13px]"
       >
         <li>
