--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
       </ul>
     </section>
 
-    <div class="mt-[24px] flex items-center gap-[24px]">
+    <div id="synonym-container" class="mt-[24px] flex items-center gap-[24px]">
       <p class="text-[16px] text-[#757575]">Synonyms</p>
-      <p class="text-[16px] text-[#A445ED] opacity-100">electronic keyboard</p>
+      <p id="synonym-text" class="text-[16px] hidden text-[#A445ED] opacity-100">
+        electronic keyboard
+      </p>
     </div>
 
     <section class="flex flex-col justify-center mt-[32px]">
