created get verb function

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <div id="synonym-container" class="mt-[24px] flex items-center gap-[24px]">
       <p class="text-[16px] text-[#757575]">Synonyms</p>
-      <p id="synonym-text" class="text-[16px] hidden text-[#A445ED] opacity-100">
+      <p id="synonym-text" class="text-[16px] text-[#A445ED] opacity-100">
         electronic keyboard
       </p>
     </div>
@@ -148,7 +148,10 @@
 
       <section class="mt-[32px] flex flex-col justify-center">
         <h1 class="font-[16px] text-[#757575]">Meaning</h1>
-        <ul class="mt-[16px] list-disc marker:text-[#8F19E8] ml-[18px]">
+        <ul
+          id="verb"
+          class="mt-[16px] list-disc space-y-2 marker:text-[#8F19E8] ml-[18px]"
+        >
           <li>To type on a computer keyboard</li>
 
           <p class="mt-[16px] text-[15px] text-[#757575]">
