--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
 
       <section class="mt-[32px] flex flex-col justify-center">
-        <h1 class="font-[16px] text-[#757575]">Meaning</h1>
+        <h1 id="'meaning" class="font-[16px] text-[#757575]">Meaning</h1>
         <ul
           id="verb"
           class="mt-[16px] list-disc space-y-2 marker:text-[#8F19E8] ml-[18px]"
