--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
 
       <section class="mt-[32px] flex flex-col justify-center">
-        <h1 id="'meaning" class="font-[16px] text-[#757575]">Meaning</h1>
+        <h1 id="meaning" class="font-[16px] text-[#757575]">Meaning</h1>
         <ul
           id="verb"
           class="mt-[16px] list-disc space-y-2 marker:text-[#8F19E8] ml-[18px]"
@@ -166,9 +166,9 @@
         <div class="flex flex-col mt-[24px] justify-center gap-[8px]">
           <p class="text-[#757575] text-[14px] underline">Source</p>
           <div class="flex items-center gap-[8px]">
-            <p class="text-[#2d2d2d] text-[14px] underline">
+            <a id="source" class="text-[#2d2d2d] text-[14px] underline">
               https://en.wiktionary.org/wiki/keyboard
-            </p>
+            </a>
             <img src="./assets/icons/link.svg" alt="link" />
           </div>
         </div>
