--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         >
           <li>To type on a computer keyboard</li>
 
-          <p class="mt-[16px] text-[15px] text-[#757575]">
+          <p id="example" class="mt-[16px] text-[15px] text-[#757575]">
             “Keyboarding is the part of this job I hate the most.”
           </p>
         </ul>
