--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
           alt="play-text"
           class="z-10 relative"
         />
+        <audio id="play-audio"></audio>
       </figure>
     </section>
 
