error handling, update

--- a/index.html
+++ b/index.html
@@ -63,26 +63,25 @@
 
     <!-- input section -->
 
-    <main>
-      <section class="mt-[24px]">
-        <div class="relative">
-          <input
-            id="search-input"
-            name="text"
-            id="text"
-            type="text"
-            placeholder="Enter a word"
-            class="bg-[#F4F4F4] px-[24px] h-[48px] w-full outline-none focus:border-[1px] focus:border-[#A445ED] text-[#2D2D2D] font-bold rounded-[16px] text-[16px]"
-          />
-          <img
-            src="./assets/icons/search.svg"
-            alt="search icon"
-            class="absolute top-1/2 right-[16px] transform -translate-y-1/2"
-          />
-        </div>
-      </section>
-      <!-- input section ends -->
-
+    <section class="mt-[24px]">
+      <div class="relative">
+        <input
+          id="search-input"
+          name="text"
+          id="text"
+          type="text"
+          placeholder="Enter a word"
+          class="bg-[#F4F4F4] px-[24px] h-[48px] w-full outline-none focus:border-[1px] focus:border-[#A445ED] text-[#2D2D2D] font-bold rounded-[16px] text-[16px]"
+        />
+        <img
+          src="./assets/icons/search.svg"
+          alt="search icon"
+          class="absolute top-1/2 right-[16px] transform -translate-y-1/2"
+        />
+      </div>
+    </section>
+    <!-- input section ends -->
+    <main id="main-section">
       <section class="mt-[24px] flex items-center justify-between">
         <div class="flex justify-center flex-col">
           <h1 id="main-text" class="font-bold text-[32px]">keyboard</h1>
