--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
   </head>
   <body class="px-[24px] md:px-0 md:w-[736px] md:max-w-[736px] md:mx-auto">
     <!-- navgation -->
-    <nav
-      class="flex items-center justify-between h-[32px] mt-[24px]"
-    >
+    <nav class="flex items-center justify-between h-[32px] mt-[24px]">
       <figure>
         <img src="./assets/icons/book.svg" alt="book-logo" />
       </figure>
@@ -65,9 +63,7 @@
 
     <!-- input section -->
 
-    <section
-      class="mt-[24px] md:w-full flex flex-col md:items-center md:justify-center"
-    >
+    <section class="mt-[24px] flex flex-col">
       <div class="relative w-full">
         <input
           id="search-input"
@@ -89,8 +85,21 @@
         class="md:text-[20px] text-[14px] mt-[8px] text-[#ff5252] text-left"
       ></p>
     </section>
+
+    <section
+      id="404-error"
+      class="justify-center hidden text-center md:mt-[132px] mt-[40px] flex-col"
+    >
+      😕
+      <p class="font-bold text-[20px] mt-[44px]">No Definitions Found</p>
+      <p class="text-[18px] text-[#757575] mt-[24px]">
+        Sorry pal, we couldn't find definitions for the word you were looking
+        for. You can try the search again at later time or head to the web
+        instead.
+      </p>
+    </section>
     <!-- input section ends -->
-    <main id="main-section">
+    <main class="" id="main-section">
       <section class="mt-[24px] flex items-center justify-between">
         <div class="flex justify-center flex-col">
           <h1 id="main-text" class="font-bold text-[32px]">keyboard</h1>
