--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
       </figure>
       <div class="flex relative items-center">
         <div class="flex items-center gap-[16px]">
-          <p class="text-[14px] font-bold cursor-pointer text-[#2d2d2d]">
+          <p
+            id="font-dropdown"
+            class="text-[14px] font-bold cursor-pointer text-[#2d2d2d]"
+          >
             Sans Serif
           </p>
           <img src="./assets/icons/dropdown.svg" alt="dropdown" />
         </div>
 
         <div
-          class="w-[183px] font-bold text-[18px] h-[152px] flex justify-center flex-col gap-[16px] py-[24px] pl-[24px] z-50 rounded-[13px] bg-white absolute top-10 right-[100px] shadow-lg"
+          class="w-[183px] hidden font-bold text-[18px] h-[152px] justify-center flex-col gap-[16px] py-[24px] pl-[24px] z-50 rounded-[13px] bg-white absolute top-10 right-[100px] shadow-lg"
         >
           <p class="cursor-pointer hover:text-[#A445ED]">Sans Serif</p>
           <p class="cursor-pointer font-Lora hover:text-[#A445ED]">Serif</p>
@@ -217,6 +220,6 @@
       </section>
     </main>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
