--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="flex relative items-center">
         <div class="flex items-center gap-[16px]">
           <p
-            id="font-dropdown"
+            id="dropdown-toggle"
             class="text-[14px] font-bold cursor-pointer text-[#2d2d2d]"
           >
             Sans Serif
@@ -49,6 +49,7 @@
         </div>
 
         <div
+          id="dropdown-section"
           class="w-[183px] hidden font-bold text-[18px] h-[152px] justify-center flex-col gap-[16px] py-[24px] pl-[24px] z-50 rounded-[13px] bg-white absolute top-10 right-[100px] shadow-lg"
         >
           <p class="cursor-pointer hover:text-[#A445ED]">Sans Serif</p>
