--- a/index.html
+++ b/index.html
@@ -22,14 +22,22 @@
     />
     <meta
       property="og:image"
-      content="https://www.wordwise.com/images/wordwise-og-image.jpg"
+      content="https://www.dropbox.com/scl/fi/7yb0y0wa7lt9h712740j0/ktztuhkskeanuokr7bdw.webp?rlkey=bfxjm01omxjljshs4goyamcki&st=k5rh8bdv&dl=0"
     />
     <meta property="og:url" content="https://www.wordwise.com" />
     <meta property="og:type" content="website" />
     <link href="dist/output.css" rel="stylesheet" />
     <!-- Favicons -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="./assets/icons/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <link
+      rel="shortcut icon"
+      href="./assets/icons/favicon-32x32.png"
+      type="image/x-icon"
+    />
   </head>
   <body
     class="px-[24px] lg:w-[736px] dark:bg-[#050505] font-Inter lg:max-w-[736px] lg:mx-auto"
