updated meta tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="dictionary, online dictionary, word definitions, synonyms, translations, English dictionary"
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://www.wordwise.com" />
+    <link rel="canonical" href="https://dictionary-liard-nine.vercel.app/" />
 
     <meta property="og:title" content="WordWise - Your Online Dictionary" />
     <meta
@@ -24,7 +24,10 @@
       property="og:image"
       content="https://www.dropbox.com/scl/fi/7yb0y0wa7lt9h712740j0/ktztuhkskeanuokr7bdw.webp?rlkey=bfxjm01omxjljshs4goyamcki&st=k5rh8bdv&dl=0"
     />
-    <meta property="og:url" content="https://www.wordwise.com" />
+    <meta
+      property="og:url"
+      content="https://dictionary-liard-nine.vercel.app/"
+    />
     <meta property="og:type" content="website" />
     <link href="dist/output.css" rel="stylesheet" />
     <!-- Favicons -->
