--- a/index.html
+++ b/index.html
@@ -155,11 +155,14 @@
         <div class="flex justify-center flex-col">
           <h1
             id="main-text"
-            class="font-bold dark:text-white text-[32px] md:text-[64px]"
+            class="font-bold w-[200px] md:w-[400px] truncate dark:text-white text-[32px] md:text-[64px]"
           >
             keyboard
           </h1>
-          <p id="phonetics" class="text-[18px] md:text-[24px] text-[#A445ED]">
+          <p
+            id="phonetics"
+            class="text-[18px] w-[200px] md:w-[400px] truncate md:text-[24px] text-[#A445ED]"
+          >
             /ˈkiːbɔːd/
           </p>
         </div>
@@ -276,7 +279,7 @@
               <a
                 id="source"
                 href="https://en.wiktionary.org/wiki/keyboard"
-                class="text-[#2d2d2d] cursor-pointer dark:text-[#ffffff] text-[14px] underline"
+                class="text-[#2d2d2d] w-[300px] truncate md:w-auto cursor-pointer dark:text-[#ffffff] text-[14px] underline"
               >
                 https://en.wiktionary.org/wiki/keyboard
               </a>
