--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       content="https://dictionary-liard-nine.vercel.app/"
     />
     <meta property="og:type" content="website" />
-    <link href="dist/output.css" rel="stylesheet" />
+    <link href="../dist/output.css" rel="stylesheet" />
     <!-- Favicons -->
     <link
       rel="icon"
@@ -290,6 +290,6 @@
       </section>
     </main>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
