--- a/public/index.html
+++ b/public/index.html
@@ -290,6 +290,6 @@
       </section>
     </main>
 
-    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
